tests/baselines/reference/callConstructAssignment.errors.txt
tests/cases/compiler/callConstructAssignment.ts(7,1): error TS2322: Type 'new () => any' is not assignable to type '() => void'.
  Signature '(): void' has no corresponding signature in 'new () => any'
tests/cases/compiler/callConstructAssignment.ts(8,1): error TS2322: Type '() => void' is not assignable to type 'new () => any'.
  Signature 'new (): any' has no corresponding signature in '() => void'


==== tests/cases/compiler/callConstructAssignment.ts (2 errors) ====
    
    
    var foo:{ ( ):void; }
    
    var bar:{ new ( ):any; }
    
    foo = bar; // error
    ~~~
!!! error TS2322: Type 'new () => any' is not assignable to type '() => void'.
!!! error TS2322:   Signature '(): void' has no corresponding signature in 'new () => any'
    bar = foo; // error
    ~~~
!!! error TS2322: Type '() => void' is not assignable to type 'new () => any'.
!!! error TS2322:   Signature 'new (): any' has no corresponding signature in '() => void'